--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -11,20 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 这个项目设计来帮你熟悉 python range 和线性代数\n",
     "# 你不能调用任何python库，包括NumPy，来完成作业\n",
     "\n",
     "A = [[1,2,3], \n",
-    "     [2,3,3], \n",
-    "     [1,2,5]]\n",
+    "     [4,5,6], \n",
+    "     [7,8,9]]\n",
     "\n",
-    "B = [[1,2,3,5], \n",
-    "     [2,3,3,5], \n",
-    "     [1,2,5,1]]\n",
+    "B = [[11,21,32,43], \n",
+    "     [32,76,27,45], \n",
+    "     [23,65,95,10]]\n",
     "\n",
     "#TODO 创建一个 4*4 单位矩阵\n",
     "I =  [ [ 0 for i in range(4)] for j in range(4) ]\n",
@@ -43,8 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 返回矩阵的行数和列数\n",
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -117,27 +121,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8, 14, 24, 18], [11, 19, 30, 28], [10, 18, 34, 20]]\n"
+      "[[144, 368, 371, 163], [342, 854, 833, 457], [540, 1340, 1295, 751]]\n"
      ]
     }
    ],
    "source": [
     "# TODO 计算矩阵乘法 AB，如果无法相乘则返回None\n",
     "def matxMultiply(A, B):\n",
-    "    W =  [ [ 0 for i in range(shape(B)[1]) ] for j in range(shape(A)[0]) ]\n",
+    "    W =  [ [ 0 for i in range(shape(B)[1]) ] for j in range(shape(A)[0])]\n",
     "    if shape(A)[1]==shape(B)[0]:\n",
     "        k=shape(A)[1]\n",
-    "        for ai in range(shape(A)[0]):\n",
+    "        for mark in range(shape(A)[0]):\n",
     "            for bj in range(shape(B)[1]):\n",
     "                for kk in range(k):\n",
-    "                    W[ai][bj]+=A[ai][kk]*B[kk][bj]\n",
+    "                    W[mark][bj]+=A[mark][kk]*B[kk][bj]\n",
     "        return W\n",
     "    else:\n",
     "        return None\n",
@@ -161,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,42 +173,39 @@
      "output_type": "stream",
      "text": [
       "(4, 3)\n",
-      "[[1.12, 2.12],\n",
-      " [3.12, 4.12],\n",
-      " [5.12, 6.12]]\n",
-      "[[1, 7],\n",
-      " [2, 8],\n",
-      " [3, 9],\n",
-      " [4, 0]]\n",
+      "[[6.12, 5.12],\n",
+      " [4.12, 3.12],\n",
+      " [2.12, 1.12]]\n",
+      "[[1, 4], [4, 6], [3, 9], [2, 3]]\n",
       "None\n",
-      "[[3, 6, 9, 12],\n",
-      " [3, 6, 9, 12],\n",
-      " [3, 6, 9, 12],\n",
-      " [3, 6, 9, 12],\n",
-      " [4, 8, 12, 16]]\n"
+      "[[9, 12, 15, 18],\n",
+      " [19, 26, 33, 40],\n",
+      " [29, 40, 51, 62],\n",
+      " [39, 54, 69, 84],\n",
+      " [17, 28, 39, 50]]\n"
      ]
     }
    ],
    "source": [
     "import pprint\n",
-    "pp=pprint.PrettyPrinter(indent=1,width=30)\n",
+    "pp=pprint.PrettyPrinter(indent=1,width=40)\n",
     "#TODO 测试1.2 返回矩阵的行和列\n",
-    "M=[[1,2,3],[1,2,3],[1,2,3],[1,2,3]]\n",
+    "M=[[1,1,1],[2,2,2],[3,3,3],[4,4,4]]\n",
     "pp.pprint(shape(M))\n",
     "#TODO 测试1.3 每个元素四舍五入到特定小数数位\n",
-    "M=[[1.123456,2.123456],[3.123456,4.123456],[5.123456,6.123456]]\n",
+    "M=[[6.123456,5.123456],[4.123456,3.123456],[2.123456,1.123456]]\n",
     "matxRound(M,2)\n",
     "pp.pprint(M)\n",
     "#TODO 测试1.4 计算矩阵的转置\n",
-    "M=[[1,2,3,4],[7,8,9,0]]\n",
+    "M=[[1,4,3,2],[4,6,9,3]]\n",
     "pp.pprint(transpose(M))\n",
     "#TODO 测试1.5 计算矩阵乘法AB，AB无法相乘\n",
     "A=[[1,2,3],[1,2,3],[1,2,3],[1,2,3],[1,2,3]]\n",
     "B=[[1,2,3,4],[1,2,3,4]]\n",
     "pp.pprint(matxMultiply(A,B))\n",
     "#TODO 测试1.5 计算矩阵乘法AB，AB可以相乘\n",
-    "A=[[1,2],[1,2],[1,2],[1,2],[1,3]]\n",
-    "B=[[1,2,3,4],[1,2,3,4]]\n",
+    "A=[[1,2],[3,4],[5,6],[7,8],[9,2]]\n",
+    "B=[[1,2,3,4],[4,5,6,7]]\n",
     "pp.pprint(matxMultiply(A,B))"
    ]
   },
@@ -240,15 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2, 3, 4, 9],\n",
-      " [5, 6, 7, 8, 0]]\n"
+      "[[1, 2, 3, 4, 9], [5, 6, 7, 8, 0]]\n"
      ]
     }
    ],
@@ -275,8 +275,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO r1 <---> r2\n",
@@ -340,8 +342,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO 实现 Gaussain Jordan 方法求解 Ax = b\n",
@@ -431,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -439,18 +443,18 @@
      "output_type": "stream",
      "text": [
       "None\n",
-      "[[2.0], [-1.0]]\n"
+      "[[0.29], [-0.33]]\n"
      ]
     }
    ],
    "source": [
     "# TODO 构造 矩阵A，列向量b，其中 A 为奇异矩阵\n",
-    "A=[[3,6],[0,0]]\n",
-    "b=[[0],[3]]\n",
+    "A=[[8,7],[0,0]]\n",
+    "b=[[0],[2]]\n",
     "pp.pprint(gj_Solve(A,b,2))\n",
     "# TODO 构造 矩阵A，列向量b，其中 A 为非奇异矩阵\n",
-    "A=[[3,6],[2,1]]\n",
-    "b=[[0],[3]]\n",
+    "A=[[8,7],[8,1]]\n",
+    "b=[[0],[2]]\n",
     "# TODO 求解 x 使得 Ax = b\n",
     "pp.pprint(gj_Solve(A,b,2))\n",
     "# TODO 计算 Ax\n",
@@ -638,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -651,23 +655,13 @@
     "'''\n",
     "def linearRegression(points):\n",
     "    n=len(points)\n",
-    "    #求x均值,#y均值\n",
-    "    total_x=0\n",
-    "    total_y=0\n",
-    "    for i in range(0,n):\n",
-    "        total_x+=points[i][0]\n",
-    "        total_y+=points[i][1]\n",
-    "    mean_x=total_x*1.0/n\n",
-    "    mean_y=total_y*1.0/n\n",
-    "        \n",
-    "    #分子\n",
-    "    numerator=0\n",
-    "    #分母\n",
-    "    denominator=0\n",
-    "    for i in range(0,n):\n",
-    "        numerator+=(points[i][0]-mean_x)*(points[i][1]-mean_y)\n",
-    "        denominator+=(points[i][0]-mean_x)**2\n",
-    "    return numerator/float(denominator),mean_y/float(mean_x)"
+    "    x=[[points[i][0],1] for i in range(n)]\n",
+    "    x_t=transpose(x)\n",
+    "    y=[[points[i][1]] for i in range(n)]\n",
+    "    x_t_change_x=matxMultiply(x_t,x)\n",
+    "    x_t_change_y=matxMultiply(x_t,y)\n",
+    "    #print 'x_t_x=',x_t_change_x\n",
+    "    return gj_Solve(x_t_change_x,x_t_change_y)"
    ]
   },
   {
@@ -679,14 +673,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2.001550955578081, 2.199345306529733)\n"
+      "[[2.0015], [9.961]]\n"
      ]
     }
    ],
@@ -721,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +733,7 @@
       "test_transpose (__main__.LinearRegressionTestCase) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 9 tests in 0.117s\n",
+      "Ran 9 tests in 0.085s\n",
       "\n",
       "OK\n"
      ]
@@ -750,7 +744,7 @@
        "<unittest.runner.TextTestResult run=9 errors=0 failures=0>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,21 +909,21 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
