--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -98,11 +98,11 @@
    "source": [
     "# TODO 计算矩阵的转置\n",
     "def transpose(M):\n",
-    "# 使用zip函数\n",
+    "# 方法1.使用zip函数\n",
     "#   W = zip(M) \n",
-    "# 使用numpy库\n",
+    "# 方法2.使用numpy库\n",
     "#   W=M.T \n",
-    "# 参考\n",
+    "# 方法3.参考\n",
     "#   W=[[M[i][j] for i in range(shape(M)[0])] for j in range(shape(M)[1])]\n",
     "\n",
     "    W =  [ [ 0 for i in range(shape(M)[0]) ] for j in range(shape(M)[1]) ]\n",
@@ -122,12 +122,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A矩阵与B矩阵相乘为:\n",
       "[[144, 368, 371, 163], [342, 854, 833, 457], [540, 1340, 1295, 751]]\n"
      ]
     }
@@ -138,14 +141,15 @@
     "    W =  [ [ 0 for i in range(shape(B)[1]) ] for j in range(shape(A)[0])]\n",
     "    if shape(A)[1]==shape(B)[0]:\n",
     "        k=shape(A)[1]\n",
-    "        for mark in range(shape(A)[0]):\n",
+    "        for ai in range(shape(A)[0]):\n",
     "            for bj in range(shape(B)[1]):\n",
     "                for kk in range(k):\n",
-    "                    W[mark][bj]+=A[mark][kk]*B[kk][bj]\n",
+    "                    W[ai][bj]+=A[ai][kk]*B[kk][bj]\n",
     "        return W\n",
     "    else:\n",
     "        return None\n",
-    "    \n",
+    "\n",
+    "print \"A矩阵与B矩阵相乘为:\" \n",
     "print matxMultiply(A,B)"
    ]
   },
@@ -166,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -242,13 +248,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2, 3, 4, 9], [5, 6, 7, 8, 0]]\n"
+      "[[1, 2, 3, 7], [4, 5, 6, 8]]\n"
      ]
     }
    ],
@@ -258,8 +266,8 @@
     "    for i in range(shape(A)[0]):\n",
     "        A[i].append(b[i][0])\n",
     "    return A\n",
-    "A=[[1,2,3,4],[5,6,7,8]]\n",
-    "b=[[9],[0]]\n",
+    "A=[[1,2,3],[4,5,6]]\n",
+    "b=[[7],[8]]\n",
     "pp.pprint(augmentMatrix(A,b))"
    ]
   },
@@ -364,18 +372,20 @@
     "\n",
     "def gj_Solve(A, b, decPts=4, epsilon = 1.0e-16):\n",
     "    if shape(A)[0]==len(b):\n",
-    "        \n",
+    "\n",
     "#       转为增广矩阵\n",
     "        augmentMatrix(A,b)\n",
-    "    \n",
+    "\n",
     "#       针对每列做操作\n",
     "        for j in range(shape(A)[1]-1):\n",
     "            i=j\n",
-    "            while i+1<shape(A)[0]:\n",
-    "                if A[j][j]<A[i+1][j]:\n",
-    "                    swapRows(A, j, i+1)\n",
-    "                i+=1\n",
-    "                \n",
+    "            \n",
+    "            # 在这一步不应该交换行，交换行是需要消耗时间的，这种实现会非常慢\n",
+    "#            while i+1<shape(A)[0]:\n",
+    "#                if A[j][j]<A[i+1][j]:\n",
+    "#                    swapRows(A, j, i+1)\n",
+    "#                i+=1\n",
+    "\n",
     "#           如果为奇异矩阵返回none\n",
     "            if abs(A[j][j])<epsilon:\n",
     "                return None\n",
@@ -421,9 +431,20 @@
     "\n",
     "**因为I为单位矩阵,Z为全0矩阵,且A为方阵,由于Y的第一列全0代表矩阵A的对角线含有0,**\n",
     "\n",
-    "**所以结果转换为上三角形矩阵的行列式的值为0,**\n",
+    "**所以此矩阵转换为上三角形矩阵的行列式的值为0：**\n",
     "\n",
-    "**当一个矩阵所在的行列式的值为0的话,该矩阵为奇异矩阵。**"
+    "$ A = \\begin{bmatrix}\n",
+    "    1&0&0    & X&X&X \\\\\n",
+    "    0&1&0    & X&X&X \\\\\n",
+    "    0&0&1    & X&X&X \\\\   \n",
+    "    0&0&0    & 0&X&X \\\\\n",
+    "    0&0&0    & 0&X&X \\\\\n",
+    "    0&0&0    & 0&X&X \\\\  \n",
+    "\\end{bmatrix} \n",
+    "$\n",
+    "\n",
+    "**当一个矩阵所在的行列式的值为0的话,该矩阵为奇异矩阵。**\n",
+    "**因此A为奇异矩阵。**"
    ]
   },
   {
@@ -436,34 +457,49 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "此Ax = b的解为:\n",
       "None\n",
-      "[[0.29], [-0.33]]\n"
+      "此Ax = b的解为:\n",
+      "[[2.0], [-1.0]]\n",
+      "其中，Ax的值为:\n",
+      "[[0], [3]]\n",
+      "其中，b的值为:\n",
+      "[[0], [3]]\n"
      ]
     }
    ],
    "source": [
     "# TODO 构造 矩阵A，列向量b，其中 A 为奇异矩阵\n",
-    "A=[[8,7],[0,0]]\n",
-    "b=[[0],[2]]\n",
+    "A=[[3,6],[0,0]]\n",
+    "b=[[0],[3]]\n",
+    "print \"此Ax = b的解为:\"\n",
     "pp.pprint(gj_Solve(A,b,2))\n",
+    "\n",
     "# TODO 构造 矩阵A，列向量b，其中 A 为非奇异矩阵\n",
-    "A=[[8,7],[8,1]]\n",
-    "b=[[0],[2]]\n",
+    "A=[[3,6],[2,1]]\n",
+    "b=[[0],[3]]\n",
     "# TODO 求解 x 使得 Ax = b\n",
+    "print \"此Ax = b的解为:\"\n",
     "pp.pprint(gj_Solve(A,b,2))\n",
+    "\n",
     "# TODO 计算 Ax\n",
     "A1=3*2-6\n",
     "A2=2*2-1\n",
     "Ax=[[0],[3]]\n",
+    "\n",
     "# TODO 比较 Ax 与 b\n",
-    "Ax=[[0],[3]]\n",
-    "b=[[0],[3]]"
+    "print \"其中，Ax的值为:\"\n",
+    "print Ax\n",
+    "print \"其中，b的值为:\"\n",
+    "print b"
    ]
   },
   {
@@ -674,13 +710,15 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.0015], [9.961]]\n"
+      "[[1.9995], [10.0136]]\n"
      ]
     }
    ],
@@ -716,7 +754,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -733,7 +773,7 @@
       "test_transpose (__main__.LinearRegressionTestCase) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 9 tests in 0.085s\n",
+      "Ran 9 tests in 0.187s\n",
       "\n",
       "OK\n"
      ]
@@ -878,7 +918,6 @@
     "            r = np.random.randint(low=3,high=10)\n",
     "            A = np.random.randint(low=-10,high=10,size=(r,r))\n",
     "            b = np.arange(r).reshape((r,1))\n",
-    "\n",
     "            x = gj_Solve(A.tolist(),b.tolist())\n",
     "            if np.linalg.matrix_rank(A) < r:\n",
     "                self.assertEqual(x,None)\n",
