--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -21,12 +21,12 @@
     "# 你不能调用任何python库，包括NumPy，来完成作业\n",
     "\n",
     "A = [[1,2,3], \n",
-    "     [4,5,6], \n",
-    "     [7,8,9]]\n",
+    "     [2,3,3], \n",
+    "     [1,2,5]]\n",
     "\n",
-    "B = [[11,21,32,43], \n",
-    "     [32,76,27,45], \n",
-    "     [23,65,95,10]]\n",
+    "B = [[1,2,3,5], \n",
+    "     [2,3,3,5], \n",
+    "     [1,2,5,1]]\n",
     "\n",
     "#TODO 创建一个 4*4 单位矩阵\n",
     "I =  [ [ 0 for i in range(4)] for j in range(4) ]\n",
@@ -92,31 +92,54 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 1], [2, 3, 2], [3, 3, 5]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO 计算矩阵的转置\n",
     "def transpose(M):\n",
     "# 方法1.使用zip函数\n",
-    "#   W = zip(M) \n",
+    "# 先用zip函数得到“行列互换”的效果，\n",
+    "# 再通过map函数对每个元素应用list()函数，将里面的tuple转换为list\n",
+    "\n",
+    "# Python 内置的高阶函数map(func, seq1[, seq2,…])\n",
+    "# map()函数将func作用于seq中的每一个元素，\n",
+    "# 并将所有的调用的结果作为一个list返回。\n",
+    "# 此例map()接收一个函数list（）和一个 list，\n",
+    "# 过把list（）依次作用在list的每个元素上，得到一个新的list并返回。\n",
+    "    W = map(list,zip(*M))\n",
+    "    \n",
+    "# 或者用列表推导式如下表达:\n",
+    "# 通过列表推导式（list comprehensions），对每个元素应用list()函数，将里面的tuple转换为list\n",
+    "#    return [list(col) for col in zip(*M)]\n",
+    "    \n",
     "# 方法2.使用numpy库\n",
     "#   W=M.T \n",
-    "# 方法3.参考\n",
-    "#   W=[[M[i][j] for i in range(shape(M)[0])] for j in range(shape(M)[1])]\n",
     "\n",
-    "    W =  [ [ 0 for i in range(shape(M)[0]) ] for j in range(shape(M)[1]) ]\n",
-    "    for i in range(shape(M)[0]):\n",
-    "        for j in range(shape(M)[1]):\n",
-    "            W[j][i]=M[i][j]\n",
-    "    return W"
+    "# 方法3.参考\n",
+    "# 多次调用shape函数，导致效率不高\n",
+    "#    W =  [ [ 0 for i in range(shape(M)[0]) ] for j in range(shape(M)[1]) ]\n",
+    "#    for i in range(shape(M)[0]):\n",
+    "#        for j in range(shape(M)[1]):\n",
+    "#            W[j][i]=M[i][j]\n",
+    "    return W\n",
+    "\n",
+    "print transpose(A)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5 计算矩阵乘法 AB"
+    "### zip()函数的理解"
    ]
   },
   {
@@ -130,24 +153,175 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[([1, 2, 3],), ([2, 3, 3],), ([1, 2, 5],)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ziptest(M):\n",
+    "#zip函数接受任意多个（包括0个和1个）序列作为参数，返回的是一个tuple（元组），然后返回由这些tuples组成的list（列表）\n",
+    "    return zip(M)\n",
+    "\n",
+    "print ziptest(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 1), (2, 3, 2), (3, 3, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def transpose(M):\n",
+    "# *M表示将M列表中的元素来zip，当M列表中存的是列表元素时，就是将列表元素来zip\n",
+    "# zip(*M)这里相当于zip([1,2,3],[4,5,6],[7,8,9])\n",
+    "    return zip(*M)\n",
+    "    \n",
+    "print transpose(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 比较实现之间的性能差距"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         80005 function calls in 0.432 seconds\n",
+      "\n",
+      "   Ordered by: standard name\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "    10000    0.040    0.000    0.040    0.000 :0(map)\n",
+      "    20000    0.096    0.000    0.096    0.000 :0(randint)\n",
+      "        1    0.000    0.000    0.000    0.000 :0(range)\n",
+      "        1    0.000    0.000    0.000    0.000 :0(setprofile)\n",
+      "    10000    0.045    0.000    0.045    0.000 :0(tolist)\n",
+      "    20000    0.061    0.000    0.061    0.000 :0(zip)\n",
+      "    10000    0.028    0.000    0.100    0.000 <ipython-input-7-63880ca7cc14>:11(transpose_student_2)\n",
+      "    10000    0.062    0.000    0.092    0.000 <ipython-input-7-63880ca7cc14>:14(transpose_pythonic)\n",
+      "        1    0.099    0.099    0.432    0.432 <ipython-input-7-63880ca7cc14>:17(test)\n",
+      "        1    0.000    0.000    0.432    0.432 <string>:1(<module>)\n",
+      "        0    0.000             0.000          profile:0(profiler)\n",
+      "        1    0.000    0.000    0.432    0.432 profile:0(test(times=10000))\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import profile\n",
+    "\n",
+    "# def transpose_student_1(M):\n",
+    "#     # 多次调用shape函数，导致效率不高\n",
+    "#     W =  [ [ 0 for i in range(shape(M)[0]) ] for j in range(shape(M)[1]) ]\n",
+    "#     for i in range(shape(M)[0]):\n",
+    "#         for j in range(shape(M)[1]):\n",
+    "#             W[j][i]=M[i][j]\n",
+    "\n",
+    "def transpose_student_2(M):\n",
+    "    W = map(list,zip(*M))\n",
+    "\n",
+    "def transpose_pythonic(M):\n",
+    "    return [list(col) for col in zip(*M)]\n",
+    "\n",
+    "def test(times=10000):\n",
+    "    for t in range(times):\n",
+    "        r,c = np.random.randint(5,25,2)\n",
+    "        matrix = np.random.randint(-10,11,size=(r,c)).tolist()\n",
+    "\n",
+    "        transpose_student_2(matrix)        \n",
+    "        transpose_pythonic(matrix)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # 你可以修改测试的次数以获得更明显的耗时对比\n",
+    "    profile.run(\"test(times=10000)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对比；\n",
+    "\n",
+    " transpose_student_2耗时\n",
+    " \n",
+    " transpose_pythonic耗时\n",
+    " \n",
+    " 最后一行：总耗时"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.5 计算矩阵乘法 AB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "A矩阵与B矩阵相乘为:\n",
-      "[[144, 368, 371, 163], [342, 854, 833, 457], [540, 1340, 1295, 751]]\n"
+      "[[8, 14, 24, 18], [11, 19, 30, 28], [10, 18, 34, 20]]\n"
      ]
     }
    ],
    "source": [
     "# TODO 计算矩阵乘法 AB，如果无法相乘则返回None\n",
-    "def matxMultiply(A, B):\n",
-    "    W =  [ [ 0 for i in range(shape(B)[1]) ] for j in range(shape(A)[0])]\n",
-    "    if shape(A)[1]==shape(B)[0]:\n",
-    "        k=shape(A)[1]\n",
-    "        for ai in range(shape(A)[0]):\n",
-    "            for bj in range(shape(B)[1]):\n",
-    "                for kk in range(k):\n",
-    "                    W[ai][bj]+=A[ai][kk]*B[kk][bj]\n",
-    "        return W\n",
-    "    else:\n",
+    "# def matxMultiply(A, B):\n",
+    "#     W =  [ [ 0 for i in range(shape(B)[1]) ] for j in range(shape(A)[0])]\n",
+    "#     if shape(A)[1]==shape(B)[0]:\n",
+    "#         k=shape(A)[1]\n",
+    "#         for ai in range(shape(A)[0]):\n",
+    "#             for bj in range(shape(B)[1]):\n",
+    "#                 for kk in range(k):\n",
+    "#                     W[ai][bj]+=A[ai][kk]*B[kk][bj]\n",
+    "#         return W\n",
+    "#     else:\n",
+    "#         return None\n",
+    "\n",
+    "#循环写太深会造成代码的可读性变差，你可以考虑利用sum函数取代最内层的循环。\n",
+    "#https://python3-cookbook.readthedocs.io/zh_CN/latest/c01/p19_transform_and_reduce_data_same_time.html\n",
+    "#可能会在改写的过程中发现难以（优雅地）获得矩阵B的列，这里的小诀窍是先将矩阵B转置。\n",
+    "#如果还想进一步压缩代码量，可以将剩下的两层循环用列表推导式替代。\n",
+    "#推荐\n",
+    "def matxMultiply(A,B):\n",
+    "    _, c = shape(A)\n",
+    "    r, _ = shape(B)\n",
+    "    if c != r :\n",
     "        return None\n",
+    "    Bt = transpose(B)\n",
+    "    result = [[sum((a*b) for a,b in zip(row,col)) for col in Bt] for row in A]\n",
+    "    return result\n",
     "\n",
     "print \"A矩阵与B矩阵相乘为:\" \n",
     "print matxMultiply(A,B)"
@@ -169,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -182,36 +356,47 @@
       "[[6.12, 5.12],\n",
       " [4.12, 3.12],\n",
       " [2.12, 1.12]]\n",
-      "[[1, 4], [4, 6], [3, 9], [2, 3]]\n",
-      "None\n",
+      "[(1, 4), (4, 6), (3, 9), (2, 3)]\n",
       "[[9, 12, 15, 18],\n",
       " [19, 26, 33, 40],\n",
       " [29, 40, 51, 62],\n",
       " [39, 54, 69, 84],\n",
-      " [17, 28, 39, 50]]\n"
+      " [17, 28, 39, 50]]\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "import pprint\n",
     "pp=pprint.PrettyPrinter(indent=1,width=40)\n",
+    "\n",
+    "#assert断言用法： 如果代码是正确的，那么就不会产生任何结果；反之，Python会抛出断言错误\n",
+    "\n",
     "#TODO 测试1.2 返回矩阵的行和列\n",
     "M=[[1,1,1],[2,2,2],[3,3,3],[4,4,4]]\n",
+    "assert shape(M) == (4, 3)\n",
     "pp.pprint(shape(M))\n",
+    "\n",
     "#TODO 测试1.3 每个元素四舍五入到特定小数数位\n",
     "M=[[6.123456,5.123456],[4.123456,3.123456],[2.123456,1.123456]]\n",
     "matxRound(M,2)\n",
+    "assert M == [[6.12, 5.12],[4.12, 3.12],[2.12, 1.12]]\n",
     "pp.pprint(M)\n",
+    "\n",
     "#TODO 测试1.4 计算矩阵的转置\n",
     "M=[[1,4,3,2],[4,6,9,3]]\n",
+    "assert transpose(M) == [(1, 4), (4, 6), (3, 9), (2, 3)]\n",
     "pp.pprint(transpose(M))\n",
-    "#TODO 测试1.5 计算矩阵乘法AB，AB无法相乘\n",
-    "A=[[1,2,3],[1,2,3],[1,2,3],[1,2,3],[1,2,3]]\n",
-    "B=[[1,2,3,4],[1,2,3,4]]\n",
-    "pp.pprint(matxMultiply(A,B))\n",
+    "\n",
     "#TODO 测试1.5 计算矩阵乘法AB，AB可以相乘\n",
     "A=[[1,2],[3,4],[5,6],[7,8],[9,2]]\n",
     "B=[[1,2,3,4],[4,5,6,7]]\n",
+    "assert matxMultiply(A,B)==[[9, 12, 15, 18], [19, 26, 33, 40],[29, 40, 51, 62],[39, 54, 69, 84],[17, 28, 39, 50]]\n",
+    "pp.pprint(matxMultiply(A,B))\n",
+    "\n",
+    "#TODO 测试1.5 计算矩阵乘法AB，AB无法相乘\n",
+    "A=[[1,2,3],[1,2,3],[1,2,3],[1,2,3],[1,2,3]]\n",
+    "B=[[1,2,3,4],[1,2,3,4]]\n",
     "pp.pprint(matxMultiply(A,B))"
    ]
   },
@@ -247,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -256,18 +441,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2, 3, 7], [4, 5, 6, 8]]\n"
+      "[[1, 2, 3, 7],\n",
+      " [2, 3, 3, 8],\n",
+      " [1, 2, 5, 9]]\n"
      ]
     }
    ],
    "source": [
+    "import copy\n",
+    "\n",
     "# TODO 构造增广矩阵，假设A，b行数相同\n",
+    "# def augmentMatrix(A, b):\n",
+    "#     for i in range(shape(A)[0]):\n",
+    "#         A[i].append(b[i][0])\n",
+    "#     return A\n",
+    "\n",
     "def augmentMatrix(A, b):\n",
-    "    for i in range(shape(A)[0]):\n",
-    "        A[i].append(b[i][0])\n",
-    "    return A\n",
-    "A=[[1,2,3],[4,5,6]]\n",
-    "b=[[7],[8]]\n",
+    "    B = copy.deepcopy(A)\n",
+    "    for i in range(shape(B)[0]):\n",
+    "        B[i].append(b[i][0])\n",
+    "    return B\n",
+    "\n",
+    "A = [[1,2,3], \n",
+    "     [2,3,3], \n",
+    "     [1,2,5]]\n",
+    "\n",
+    "b=[[7],[8],[9]]\n",
+    "\n",
     "pp.pprint(augmentMatrix(A,b))"
    ]
   },
@@ -283,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +574,7 @@
     "    if shape(A)[0]==len(b):\n",
     "\n",
     "#       转为增广矩阵\n",
-    "        augmentMatrix(A,b)\n",
+    "        A = augmentMatrix(A,b)\n",
     "\n",
     "#       针对每列做操作\n",
     "        for j in range(shape(A)[1]-1):\n",
@@ -429,9 +629,9 @@
     "\n",
     "TODO 证明：\n",
     "\n",
-    "**因为I为单位矩阵,Z为全0矩阵,且A为方阵,由于Y的第一列全0代表矩阵A的对角线含有0,**\n",
+    "**奇异矩阵在线性代数的概念： 对应的行列式等于0的方阵。**\n",
     "\n",
-    "**所以此矩阵转换为上三角形矩阵的行列式的值为0：**\n",
+    "**在此例中，因为I为单位矩阵,Z为全0矩阵,且A为方阵,由于Y的第一列全0代表矩阵A的对角线含有0,**\n",
     "\n",
     "$ A = \\begin{bmatrix}\n",
     "    1&0&0    & X&X&X \\\\\n",
@@ -442,6 +642,8 @@
     "    0&0&0    & 0&X&X \\\\  \n",
     "\\end{bmatrix} \n",
     "$\n",
+    "\n",
+    "**所以此矩阵转换为上三角形矩阵的行列式的值为0，即|A|=0,**\n",
     "\n",
     "**当一个矩阵所在的行列式的值为0的话,该矩阵为奇异矩阵。**\n",
     "**因此A为奇异矩阵。**"
@@ -456,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -709,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -718,7 +920,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.9995], [10.0136]]\n"
+      "[[2.0017], [9.6774]]\n"
      ]
     }
    ],
@@ -731,7 +933,8 @@
     "P =  [ [ 0 for i in range(2) ] for j in range(100) ]\n",
     "for i in range(100):\n",
     "    P[i][0]=random.randint(0, 100)\n",
-    "    P[i][1]=random.gauss(2*P[i][0]+10,0.25)\n",
+    "    P[i][1]=random.gauss(2*P[i][0]+10,1)\n",
+    "#高斯噪音指的是服从标准正态分布的随机数，要求均值为0方差为1\n",
     "    \n",
     "#TODO 对这100个点进行线性回归，将线性回归得到的函数和原线性函数比较\n",
     "print linearRegression(P)"
@@ -753,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -773,7 +976,7 @@
       "test_transpose (__main__.LinearRegressionTestCase) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 9 tests in 0.187s\n",
+      "Ran 9 tests in 0.201s\n",
       "\n",
       "OK\n"
      ]
@@ -784,7 +987,7 @@
        "<unittest.runner.TextTestResult run=9 errors=0 failures=0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,15 +1136,6 @@
     "suite = unittest.TestLoader().loadTestsFromTestCase(LinearRegressionTestCase)\n",
     "unittest.TextTestRunner(verbosity=3).run(suite)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
