--- a/linear_regression_project.ipynb
+++ b/linear_regression_project.ipynb
@@ -28,7 +28,7 @@
     "     [2,3,3,5], \n",
     "     [1,2,5,1]]\n",
     "\n",
-    "#TODO 创建一个 4*4 单位矩阵\n",
+    "#TODO 创建一个 4*4 的单位矩阵\n",
     "I =  [ [ 0 for i in range(4)] for j in range(4) ]\n",
     "for i in range(4):\n",
     "    for j in range(4):\n",
